--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 
             </form>
 
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3608.508003911057!2d55.302811152039496!3d25.253491030166057!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sae!4v1719401807416!5m2!1sen!2sae" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3608.508003911057!2d55.302811152039496!3d25.253491030166057!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sae!4v1719401807416!5m2!1sen!2sae" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
 
             <ul class="contact-list">
 
