--- a/index.html
+++ b/index.html
@@ -47,10 +47,6 @@
     <span class="line"></span>
   </div>
 
-
-
-
-
   <!-- 
     - #HEADER
   -->
@@ -106,10 +102,6 @@
     </div>
   </header>
 
-
-
-
-
   <main>
     <article>
 
@@ -123,7 +115,7 @@
           <div class="banner-outline has-after">
 
             <div class="hero-banner img-holder has-after" style="--width: 500; --height: 680;" data-tilt>
-              <img src="./assets/images/img.jpg" width="500" height="680" alt="Abeer" class="img-cover">
+              <img src="./assets/images/image.jpg" width="500" height="680" alt="Abeer" class="img-cover">
             </div>
 
             <span class="span title">Abeer.</span>
@@ -405,10 +397,6 @@
         </div>
       </section>
 
-
-
-
-
       <!-- 
         - #CONTACT
       -->
@@ -480,10 +468,6 @@
     </article>
   </main>
 
-
-
-
-
   <!-- 
     - #FOOTER
   -->
@@ -504,19 +488,12 @@
     </div>
   </footer>
 
-
-
-
-
   <!-- 
     - #CUSTOM CURSOR
   -->
 
   <div class="cursor-dot" data-cursor></div>
   <div class="cursor-outline" data-cursor></div>
-
-
-
 
 
   <!-- 
